# backend/docs/swagger.json
@@ -1,14 +1,54 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "Bulletin Board Service API in Go using Gin Frameworl",
+        "description": "Bulletin Board Service API in Go using Gin Framework",
         "title": "Bulletin Board API",
         "contact": {},
         "version": "1.0"
     },
-    "host": "localhost:3000",
+    "host": "localhost:8080",
     "basePath": "/",
     "paths": {
+        "/api/forget-password": {
+            "post": {
+                "description": "Send mail",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "FORGET PASSWORD"
+                ],
+                "summary": "Send mail",
+                "parameters": [
+                    {
+                        "description": "Mail Request Body",
+                        "name": "MailRequest",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.MailRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/api/login": {
             "post": {
                 "description": "Authenticates user login",
@@ -93,11 +133,50 @@
                 "parameters": [
                     {
                         "description": "Post Request Body",
-                        "name": "CreatePostRequest",
+                        "name": "PostRequest",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/request.CreatePostRequest"
+                            "$ref": "#/definitions/request.PostRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/posts/csv-posts": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Create new csv posts",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "POST"
+                ],
+                "summary": "Create new csv posts",
+                "parameters": [
+                    {
+                        "description": "Post List Request Body",
+                        "name": "CsvPostRequest",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.CsvPostRequest"
                         }
                     }
                 ],
@@ -164,11 +243,11 @@
                 "parameters": [
                     {
                         "description": "Post Request Body",
-                        "name": "CreatePostRequest",
+                        "name": "PostRequest",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/request.CreatePostRequest"
+                            "$ref": "#/definitions/request.PostRequest"
                         }
                     },
                     {
@@ -221,6 +300,46 @@
                 }
             }
         },
+        "/api/reset-password": {
+            "post": {
+                "description": "Rest Password",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "FORGET PASSWORD"
+                ],
+                "summary": "Rest password",
+                "parameters": [
+                    {
+                        "description": "Password Request Body",
+                        "name": "PasswordRequest",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.PasswordRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/api/users": {
             "get": {
                 "security": [
@@ -265,11 +384,50 @@
                 "parameters": [
                     {
                         "description": "User Request Body",
-                        "name": "CreateUserRequest",
+                        "name": "UserRequest",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/request.CreateUserRequest"
+                            "$ref": "#/definitions/request.UserRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/users/csv-users": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Create new csv users",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "USER"
+                ],
+                "summary": "Create new csv users",
+                "parameters": [
+                    {
+                        "description": "User List Request Body",
+                        "name": "CsvUserRequest",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.CsvUserRequest"
                         }
                     }
                 ],
@@ -336,11 +494,11 @@
                 "parameters": [
                     {
                         "description": "User Request Body",
-                        "name": "CreateUserRequest",
+                        "name": "UserRequest",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/request.CreateUserRequest"
+                            "$ref": "#/definitions/request.UserRequest"
                         }
                     },
                     {
@@ -395,7 +553,71 @@
         }
     },
     "definitions": {
-        "request.CreatePostRequest": {
+        "request.CsvPostRequest": {
+            "type": "object",
+            "properties": {
+                "posts": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/request.PostRequest"
+                    }
+                }
+            }
+        },
+        "request.CsvUserRequest": {
+            "type": "object",
+            "properties": {
+                "users": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/request.UserRequest"
+                    }
+                }
+            }
+        },
+        "request.LoginRequest": {
+            "type": "object",
+            "required": [
+                "email",
+                "password"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string",
+                    "maxLength": 200,
+                    "minLength": 1
+                },
+                "password": {
+                    "type": "string",
+                    "maxLength": 200,
+                    "minLength": 1
+                }
+            }
+        },
+        "request.MailRequest": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string",
+                    "maxLength": 200,
+                    "minLength": 1
+                }
+            }
+        },
+        "request.PasswordRequest": {
+            "type": "object",
+            "required": [
+                "password"
+            ],
+            "properties": {
+                "password": {
+                    "type": "string",
+                    "maxLength": 200,
+                    "minLength": 1
+                }
+            }
+        },
+        "request.PostRequest": {
             "type": "object",
             "required": [
                 "description",
@@ -423,7 +645,7 @@
                 }
             }
         },
-        "request.CreateUserRequest": {
+        "request.UserRequest": {
             "type": "object",
             "required": [
                 "email",
@@ -464,25 +686,9 @@
                 "type": {
                     "type": "string",
                     "default": "1"
-                }
-            }
-        },
-        "request.LoginRequest": {
-            "type": "object",
-            "required": [
-                "email",
-                "password"
-            ],
-            "properties": {
-                "email": {
-                    "type": "string",
-                    "maxLength": 200,
-                    "minLength": 1
                 },
-                "password": {
-                    "type": "string",
-                    "maxLength": 200,
-                    "minLength": 1
+                "updated_user_id": {
+                    "type": "integer"
                 }
             }
         },
