# backend/types/request/posts.go
@@ -1,6 +1,6 @@
 package request
 
-type CreatePostRequest struct {
+type PostRequest struct {
 	Title           string `validate:"required,max=200,min=1" json:"title"`
 	Description     string `validate:"required,max=200,min=1" json:"description"`
 	Status          uint   `json:"status"`
@@ -8,10 +8,6 @@ type CreatePostRequest struct {
 	Updated_User_ID uint   `json:"updated_user_id"`
 }
 
-type UpdatePostRequest struct {
-	Id              int    `validate:"required"`
-	Title           string `validate:"max=200, main=1" json:"title"`
-	Description     string `validate:"max=200,min=1" json:"description"`
-	Status          uint   `json:"status"`
-	Updated_User_ID uint   `json:"updated_user_id"`
+type CsvPostRequest struct {
+	Posts []PostRequest `json:"posts"`
 }
